--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/styled": "^11.11.0",
+    "@handsontable/react": "^13.1.0",
+    "@mui/material": "^5.14.13",
+    "@mui/styled-engine": "^5.14.13",
+    "@silevis/reactgrid": "^4.1.1",
+    "d3": "^7.8.5",
+    "handsontable": "^13.1.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-table": "^7.8.0"
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
+    "@mui/icons-material": "^5.14.13",
+    "@mui/material": "^5.14.13",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
-    "eslint": "^8.45.0",
+    "d3": "^7.8.5",
+    "eslint": "^8.51.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
