--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@mui/icons-material": "^5.14.13",
