--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,14 +14,14 @@
     "@handsontable/react": "^13.1.0",
     "@mui/material": "^5.14.13",
     "@mui/styled-engine": "^5.14.13",
+    "@mui/x-charts": "^6.0.0-alpha.15",
     "@silevis/reactgrid": "^4.1.1",
     "d3": "^7.8.5",
-    "handsontable": "^13.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.0/xlsx-0.20.0.tgz"
   },
   "devDependencies": {
     "@mui/icons-material": "^5.14.13",
