working an responsive layout +  FEATURES

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.13",
     "@mui/styled-engine": "^5.14.13",
+    "@mui/system": "^5.14.18",
     "@mui/x-charts": "^6.0.0-alpha.15",
     "@react-buddy/ide-toolbox": "^2.4.0",
     "@react-buddy/palette-mui": "^5.0.2",
