xlsx is nor possible to upload and display

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@react-buddy/palette-mui": "^5.0.2",
     "@silevis/reactgrid": "^4.1.1",
     "axios": "^1.5.1",
+    "node-sass": "^9.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
