--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@mui/x-charts": "^6.0.0-alpha.15",
     "@react-buddy/ide-toolbox": "^2.4.0",
     "@react-buddy/palette-mui": "^5.0.2",
+    "@reonomy/react-confetti-explosion": "^1.0.32",
     "@silevis/reactgrid": "^4.1.1",
     "axios": "^1.5.1",
     "node-sass": "^9.0.0",
